# cartalk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
cartalk/: __init__.py  cli.py
cartalk/ai/: __init__.py  diagnose.py
cartalk/api/: __init__.py  engine.py  server.py
cartalk/db/: __init__.py  loader.py  models.py
cartalk/monitor/: __init__.py  daemon.py  hooks.py  led.py  lifecycle.py  source.py  store.py  triggers.py  webstatus.py
cartalk/protocol/: __init__.py  dtc.py  elm_frames.py  uds.py
cartalk/scanner/: __init__.py  scan.py
cartalk/transport/: __init__.py  base.py  elm327.py  fake.py  ftdi_termux.py  loopback.py  stream.py  tcp.py  transcript.py
cartalk/webui/: __init__.py  app.js  index.html  style.css
deploy/: 99-cartalk-elm.rules  cartalk-monitor.service  cloudflared-config.example.yml  install.sh
docs/: android-termux.md  architecture.md  database-format.md  elm327-notes.md  feasibility-shifter-ess.md  pi-monitor.md  research-fca.md  roadmap.md  vehicle-owner-issues.md
scripts/: build-web-db.py  termux-serve.sh
tests/: test_db.py  test_dtc.py  test_elm327_transport.py  test_elm_frames.py  test_engine.py  test_monitor_led.py  test_monitor_lifecycle.py  test_monitor_source.py  test_monitor_triggers.py  test_scan.py  test_server.py  test_stream_injection.py  test_tcp_transport.py  test_transcript.py  test_uds.py
tests/integration/: test_emulator.py
web/: README.md  app.js  index.html  manifest.webmanifest  package.json  style.css  sw.js
web/db/: chrysler-pacifica_2018.json  index.json
web/lib/: db.js  dtc.js  (+9 more)
(+10 files in other folders)
